Add disable / enable feature  by F6

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
     <title>Getting Started Extension's Popup</title>
     </style>
   </head>
-  <script></script>
   <body>
-    <h1>BG Color Changer</h1>
+    <p id="captor_switch">enabled</p>
   </body>
+  <script src="jquery.js"></script>
+  <script src="popup.js"></script>
 </html>
